# Video-to-ANSIGreyscale

./: CMakeLists.txt  README.md  opencv-image_header.h  source.cpp
